deployment_basic.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  labels:
    app: springboot-app
spec:
  replicas: 1  # Updated replicas for high availability
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: sumanth17121988/springbootmetric:1
        ports:
        - name: metrics-port  # Named port for Prometheus
          containerPort: 8881  # Application container port
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-service
  labels:
    prometheus: monitored  # Label to match ServiceMonitor
spec:
  selector:
    app: springboot-app
  ports:
    - name: metrics-port  # Named port for Prometheus
      protocol: TCP
      port: 8881  # Exposed service port
      targetPort: 8881  # Container port
  type: LoadBalancer  # Expose the service externally
