deployment_datadog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  labels:
    app: springboot-app
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: java-service
    tags.datadoghq.com/version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
      tags.datadoghq.com/service: java-service
      tags.datadoghq.com/env: dev
      tags.datadoghq.com/version: "0.0.1"
  template:
    metadata:
      labels:
        app: springboot-app
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: java-service
        tags.datadoghq.com/version: "0.0.1"
        admission.datadoghq.com/enabled: "true"
      annotations:
        # Auto-inject the Datadog Java tracer
        admission.datadoghq.com/enabled: "true"
        admission.datadoghq.com/java-lib.version: "v1.50.0"
        # Point tracer at node's Agent
        admission.datadoghq.com/config.mode: "hostip"
        # Collect stdout/stderr as logs for THIS container
        ad.datadoghq.com/java-service.logs: >-
          [{"source":"java","service":"java-service","auto_multi_line_detection": true}]
    spec:
      containers:
        - name: springboot-app
          image: sumanth17121988/springbootmetric:1
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics-port
              containerPort: 8881
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-service
  labels:
    app: springboot-app
spec:
  type: ClusterIP
  selector:
    app: springboot-app
    tags.datadoghq.com/service: java-service
  ports:
    - name: metrics-port
      protocol: TCP
      port: 80
      targetPort: 8881
