deployment_datadog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-service
  labels:
    app: java-service
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: java-service
    tags.datadoghq.com/version: "0.0.1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-service
      tags.datadoghq.com/service: java-service
      tags.datadoghq.com/env: dev
      tags.datadoghq.com/version: "0.0.1"
  template:
    metadata:
      labels:
        app: java-service
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: java-service
        tags.datadoghq.com/version: "0.0.1"
        admission.datadoghq.com/enabled: "true"
      annotations:
        # Auto-inject the Datadog Java tracer
        admission.datadoghq.com/enabled: "true"
        admission.datadoghq.com/java-lib.version: "v1.50.0"
        # Configure injector to point tracer at the node's Agent
        admission.datadoghq.com/config.mode: "hostip"
        # Collect stdout/stderr as logs for THIS container
        ad.datadoghq.com/java-service.logs: >-
          [{"source":"java","service":"java-service","auto_multi_line_detection": true}]
    spec:
      containers:
        - name: java-service
          image: sumanth17121988/java-service-datadog:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8881
---
apiVersion: v1
kind: Service
metadata:
  name: java-service-lb
  labels:
    app: java-service
spec:
  type: LoadBalancer
  selector:
    app: java-service
    tags.datadoghq.com/service: java-service
  ports:
    - name: http
      port: 8881        # external LB port
      targetPort: 8881  # container port
